# pdf-classifier

./: .gitignore  README.md  pyproject.toml  research.ipynb
api/: main.py  utils.py
data/csv/: pdf_features.csv
pdf_classifier/: classifier.py  feature_extraction.py
pdf_classifier/models/: logistic_regression_model.pkl
tests/: test_api.py  test_classifier.py
