[tool.poetry]
name = "pdf-classifier"
version = "0.1.0"
description = ""
authors = ["-"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
pylint = "^3.2.0"
black = "^24.4.2"
pytest = "^8.2.1"
pyright = "^1.1.365"
