[tool.poetry]
name = "pdf-classifier"
version = "0.1.0"
description = ""
authors = ["-"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.24.11"
pillow = "^11.0.0"
pandas = "^2.2.3"
pytesseract = "^0.3.13"
pdf2image = "^1.17.0"
opencv-python = "^4.10.0.84"
pypdf2 = "^3.0.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
uvicorn = "^0.32.0"
fastapi = "^0.115.2"
python-multipart = "^0.0.12"
httpx = "^0.27.2"
pypdf = "^5.0.1"
autopep8 = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
pylint = "^3.2.0"
black = "^24.4.2"
pytest = "^8.2.1"
pyright = "^1.1.365"
